--- a/templates/add_goal.html
+++ b/templates/add_goal.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %} {% block content %}
+
+
 <div class="inprogress">
     <h3>Add Goal</h3>
 </div>
@@ -39,7 +41,7 @@
                 </div>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit">Add Goal
+                <button class="new_goal_button_on_form"><type="submit">Add Goal
                 <i class="material-icons right">playlist_add</i>
              </button>
             </div>
