--- a/templates/goal_detail.html
+++ b/templates/goal_detail.html
@@ -1,38 +1,43 @@
 {% extends 'base.html' %} {% block content %}
+<!--<img class="responsive-img goal_img" src="{{url_for('static', filename='images/goal_detail2.jpg')}}">-->
 
-<div class="inprogress">
-    <h3> Goal: {{ goal.goal_name }} </h3>
-</div>
 
-<div class="inprogress_goals">
-    <p class="orange_font"> Goal status </p>
+<div class="row">
 
-    <p class="italic">{{ goal.status }}</p>
-    <hr>
-    <p class="orange_font"> Why do I want to achieve this goal?</p>
-    <p class="italic"> {{ goal.goal_reasons }}</p>
-    <hr>
-    <p class="orange_font"> Steps required to complete this goal </p>
+    <div class="col s6 offset-s3 inprogress_goals">
+        <div class="center">
+            <div class="goal_name">{{ goal.goal_name }}</div> Hi there! <b>{{ goal.status }}.</b> Keep it up!
+            <br> Remember, why are you doing this?<b> {{ goal.goal_reasons }}!</b>
 
-    {%for step in goal.steps%}
+            <p></p>
+            <div>Simply complete these steps to acheive this goal:</div>
 
-    <div><span><p class="italic">{{step.name}}</p>
+            <p></p>
+        </div>
+
+        {%for step in goal.steps%}
+
+        <div><span><b>{{step.name}}</b>
   
     {% if step.is_done %}
-    <img src="{{ url_for('static', filename='images/donesymbol.png')}}"></span></div>
+    <img src="{{ url_for('static', filename='images/donesymbol.png')}}" class="tick"></span>
 
 
-    <form method="POST" action="{{ url_for('mark_not_done', category=goal.category_name, goal_id=goal._id, step_id=step._id)  }}">
-        <input class= "mark_done" type="Submit" value="Mark as Not Done">
-    </form>
-    <hr> {% else %}
+            <form method="POST" action="{{ url_for('mark_not_done', category=goal.category_name, goal_id=goal._id, step_id=step._id)  }}">
+                <input class="mark_done" type="Submit" value="Mark as Not Done">
+            </form>
+            <hr> {% else %}
 
-    <form method="POST" action="{{ url_for('mark_done', category=goal.category_name, goal_id=goal._id, step_id=step._id)  }}">
-        <input class="mark_done" type="Submit" value="Mark as Done">
-    </form>
-    <hr> 
-    {% endif %} {%endfor%}
- 
-    <p><a href="{{url_for('add_step', category=goal.category_name, goal_id=goal._id)}}" class="addstep">Add another step</a></p>
+            <form method="POST" action="{{ url_for('mark_done', category=goal.category_name, goal_id=goal._id, step_id=step._id)  }}">
+                <input class="mark_done" type="Submit" value="Mark as Done">
+            </form>
+            <hr>
+        </div>
+
+        {% endif %} {%endfor%}
+
+        <p><a href="{{url_for('add_step', category=goal.category_name, goal_id=goal._id)}}" class="addstep"><i class="fas fa-plus"> STEP</i></a></p>
+    </div>
 </div>
+
 {% endblock %}
