--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="row">
-    <h3> New Category </h3>
-</div>
 
-<div class="row">
+
+<div class="categories_img"></div>
+
+
+
+<div class="row add_category">
+    <h3> New Category </h3>
+
     <div class="col s8 offset-s2 form">
 
         <form action="categories/add" method="POST" enctype="multipart/form-data">
