--- a/templates/overview.html
+++ b/templates/overview.html
@@ -6,51 +6,58 @@
 <div class="row arrow tagline">
     <div class="col s2"></div>
     <div class="col s8"><b>Goal Keeper</b> helps make the process of setting and tracking your goals simple. Create plans, track progress, get results!
-        <p>Check your progress below!<br>
-            <a href='#goals'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
+        <p>Why use Goal Keeper? <br>
+            <a href='#reasons'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
     </div>
     <div class="col s2"></div>
 </div>
 
 
 
+<div class="row" id="reasons">
 
 
-<!--<div class="row">-->
-<!--    <div class="col s12">-->
-<!--        <h2>Why set goals with Goal Getter?</h2>-->
-<!--    </div>-->
-<!--</div>-->
+    <div class="heading">Why set goals with Goal Keeper?</div>
 
-<div class="heading">Why set goals with Goal Keeper?</div>
-
-<div class="row">
 
     <div class="col s4 reasons_for_goal_getter">
         <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>
 
-        <b>Clearer Focus</b>
-        <div class="reasons_paragraph">Properly thought out and stated, goals clearly set out your intentions and desires; the things you really want to achieve.</div>
+
+        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated, goals clearly set out your intentions and desires; the things you really want to achieve.</div>
     </div>
 
     <div class="col s4 reasons_for_goal_getter">
         <img src="{{ url_for('static', filename='images/peace_of_mind.jpg')}}" class="vector_img"><br>
-        <b>Peace of mind</b>
-        <div class="reasons_paragraph">Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>
+
+        <div class="reasons_paragraph"> <b>Peace of mind</b> <br>Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>
     </div>
 
     <div class="col s4 reasons_for_goal_getter">
         <img src="{{ url_for('static', filename='images/measure_progress.jpg')}}" class="vector_img"><br>
-        <b>Measure your progress</b>
-        <div class="reasons_paragraph">Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>
+
+        <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>
     </div>
+</div>
+
+<div class="row center">
+
+    <p>Check your progress below!<br>
+        <a href='#goals'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
 </div>
 
 
 
 
+
+
+
+
 <div class="row" id="goals">
-    <div class="col s4 offset-s2">
+
+    <div class="row heading">Your Progress</div>
+    <div class="col s2"></div>
+    <div class="col s4">
 
         <img src="{{ url_for('static', filename='images/in_progress.jpg')}}">
         <div class="goal_name">Current goals</div>
